fix truncated_description for post

--- a/app/assets/stylesheets/public/_post_posters.sass
+++ b/app/assets/stylesheets/public/_post_posters.sass
@@ -30,6 +30,7 @@
           width: 215px
 
         .text, .text_with_image
+          text-align: center
           font-size: 12px
           line-height: 1.4
           padding: 5px 10px
